--- a/cliente/templates/mostrar.html
+++ b/cliente/templates/mostrar.html
@@ -14,11 +14,9 @@
 		 <label class="form-control">Bens Envolvidos: {{ BO.bensEnvolvidos }}</label>
 		 <label class="form-control" style="height:100px">Dinâmica do Fato: {{ BO.dinamicaDoFato }}</label>
 		 <label class="form-control">ID: {{ BO._id }}</label>
+		 <a ng-click="gerarPDF()" class="btn btn-danger">Gerar PDF</a>
 		<a href="#/BOs" class="btn btn-default">Voltar</a>
 		</div>
 	</form>
     <div>
 <div>
-
-
-	<a onClick="gerarPDF()" class="btn btn-danger">Gerar PDF</a>
